--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
     <!--Links Secondary nav bar-->
     <div class="links">
         <ul>
-            <a href="" class="linksanimation ankerTagStyle"><i class="fas fa-home"></i> HOME</a>
-            <a href="" class="linksanimation ankerTagStyle"><i class="fas fa-plane"></i> FLIGHTS</a>
-            <a href="" class="linksanimation ankerTagStyle"><i class="fas fa-hotel"></i> HOTELS</a>
-            <a href="" class="linksanimation ankerTagStyle"><i class="fas fa-gift"></i> HOLIDAYS</a>
-            <a href="" class="linksanimation ankerTagStyle"><i class="fas fa-pen"></i> BLOG</a>
-            <a href="" class="linksanimation ankerTagStyle"><i class="fas fa-phone-alt"></i> 1800 105 2541</a>
+            <a href="" class="linksAnimation ankerTagStyle ankerSecondNavJs activeSecondNav"><i class="fas fa-home"></i> HOME</a>
+            <a href="" class="linksAnimation ankerTagStyle ankerSecondNavJs"><i class="fas fa-plane"></i> FLIGHTS</a>
+            <a href="" class="linksAnimation ankerTagStyle ankerSecondNavJs"><i class="fas fa-hotel"></i> HOTELS</a>
+            <a href="" class="linksAnimation ankerTagStyle ankerSecondNavJs"><i class="fas fa-gift"></i> HOLIDAYS</a>
+            <a href="" class="linksAnimation ankerTagStyle ankerSecondNavJs"><i class="fas fa-pen"></i> BLOG</a>
+            <a href="" class="linksAnimation ankerTagStyle ankerSecondNavJs"><i class="fas fa-phone-alt"></i> 1800 105 2541</a>
         </ul>
     </div>
 
@@ -72,18 +72,18 @@
     <div>
         <!--Flight nav bar links-->
         <ul class="forumStyleAnkerTags">
-            <a class="formAnkerTags  ankerTagStyle" href="">Flights</a>
-            <a class="formAnkerTags ankerTagStyle" href="">Hotel</a>
+            <a class="formAnkerTags  ankerTagStyle activeFormLink" href=""> <i class="fas fa-plane"></i> Flights</a>
+            <a class="formAnkerTags ankerTagStyle" href=""><i class="fas fa-hotel"></i> Hotel</a>
             <a class="formAnkerTags ankerTagStyle" href="">Flights + Hotels</a>
-            <a class="formAnkerTags ankerTagStyle" href="">Holidays</a>
+            <a class="formAnkerTags ankerTagStyle" href=""><i class="fas fa-gift"></i> Holidays</a>
         </ul>
 
         <!--Form Start-->
         <div class="forumStyle">
             <form>
                 <div class="btnForm">
-                    <input type="button" id="domesticBtn" value="Domestic">
-                    <input type="button" id="internasionalBtn" value="International">
+                    <input class="domesticBtn  btn active" type="button"  value="Domestic" onclick="">
+                    <input class="internationalBtn btn" type="button"  value="International" onclick="">
                 </div>
                 <h2 class="formHeading">BOOK YOUR FLIGHTS</h2>
 
